# face_tracker

src/: CMakeLists.txt
src/data/: microsoft_laptop.xml  tracker_model.dat~
src/opencv_hotshots/ft/: CMakeLists.txt  face_detector.cpp  face_detector.hpp  ft_data.hpp  patch_model.hpp
src/opencv_hotshots/ft/exe/: CMakeLists.txt  annotate.cpp  face_feature.cpp  face_feature.h  train_face_detector.cpp  utilities.cpp  utilities.h  visualize_face_feature.cpp  visualize_face_tracker.cpp
